removed scroll snap align center s issue on mobile

--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ section {
     text-align: center;
     width: 100%;
     height: 100vh;
-    scroll-snap-align: center;
+    /* scroll-snap-align: center; */
 }
 
 section#home {
